// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorMessage /> check ErrorMessage renders properly custom class testclass 1`] = `
<p
  className="error-message testclass"
>
  test error
</p>
`;

exports[`<ErrorMessage /> check ErrorMessage renders properly with default props 1`] = `
<p
  className="error-message "
>
  test error
</p>
`;
